# dci-core-test

./: CMakeLists.txt
cmakeModules/: dciTest.cmake
include/dci/: test.hpp
include/dci/test/: api.hpp  entryPoint.hpp
src/: entryPoint.cpp
